[workspace]
members = [
    "legacy",
    "day_1/fib",
    "day_1/collatz",
    "day_1/nested_arrays",
    "day_1/geometry",
    "day_2/expr_eval",
    "day_2/gui_library",
    "day_2/generic_min",
    "day_3/builder_type",
    "day_3/binary_tree",
    "day_3/health_statistics",
    "day_4/luhn",
    "day_4/iter_chaining",
    "day_4/gui_library",
    "day_4/rewriting_result",
]
resolver = "2"
