[package]
name = "legacy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "legacy_book_library"
path = "book_library.rs"

[[bin]]
name = "legacy_health_statistics"
path = "health_statistics.rs"

[[bin]]
name = "legacy_iterators-and-ownership"
path = "iterators_ownership.rs"

[lib]
name = "legacy_strings_iterators"
path = "strings_iterators.rs"
